--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.google.code.gson:gson:2.7'
+    implementation 'com.android.support:design:26.+'
+    implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
 }
