--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".splashScreen.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,8 +23,8 @@
             android:name=".service.DownloadImgService"
             android:exported="false" />
 
+        <activity android:name=".MainActivity"/>
         <activity android:name=".splashScreen.WebViewActivity"/>
-        <activity android:name=".splashScreen.SplashActivity"/>
     </application>
 
 </manifest>
