--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.7'
     implementation 'com.android.support:design:26.+'
     implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
