--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.github.Aspsine:SwipeToLoadLayout:1.0.4'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
 }
